--- a/.github/workflows/documentation-checks.yaml
+++ b/.github/workflows/documentation-checks.yaml
@@ -69,4 +69,4 @@ jobs:
         run: |
           #Build dummy documentation
           source env/bin/activate
-          make dummy SPHINXOPTS="-W --keep-going"
+          make dummy SPHINXOPTS="-W --keep-going -n"
